--- a/stats.css
+++ b/stats.css
@@ -13,12 +13,12 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    margin-bottom: 20px;
+    margin: 30px 0 20px 0;
 }
 
 .statButton {
-    width: 40px;
-    height: 40px;
+    width: 2rem;
+    height: 2rem;
     border-radius: 50%;
     display: flex;
     justify-content: center;
