--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ html, body {
   justify-content: center;
 }
 
+#secondHalfContainer {
+  height: 45vh;
+}
+
 #resetDiv {
   height: 10vh;
   display: flex;
@@ -70,7 +74,39 @@ html, body {
   display: flex;
   width: 100%;
   justify-content: center;
-  margin: 30px 0;
+  margin: 35px 0;
+}
+
+#topStats {
+  display: flex;
+}
+
+#topStats h1 {
+  margin: 0 0 0 30px;
+}
+
+#topStats a {
+  font-size: 24px;
+  align-self: center;
+  color: black;
+}
+
+#underlined-text {
+  text-decoration-line: underline;
+  text-decoration-color: aqua;
+  font-size: 12px;
+  font-style: italic;
+  margin: 20px 0;
+}
+
+#pastBoards {
+  text-decoration-line: underline;
+  text-decoration-color: aqua;
+}
+
+.underlineStats {
+  text-decoration-line: underline;
+  text-decoration-color: aqua;
 }
 
 #teamNames {
@@ -103,7 +139,7 @@ html, body {
   justify-content: center;
   align-items: center;
   margin: 20px 0;
-  height: 40px;
+  height: 37px;
 }
 
 #firstPlayer, #secondPlayer {
@@ -394,7 +430,7 @@ html, body {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin: 0 5px;
+  margin: 20px 5px;
   cursor: pointer;
   border-radius: 20px;
 }
