game id as header

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ html, body {
 
 /* Container styles */
 #firstHalfContainer, #secondHalfContainer {
-  height: 35vh;
+  height: 30vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -75,10 +75,6 @@ html, body {
   width: 100%;
   justify-content: center;
   margin: 35px 0;
-}
-
-#topStats {
-  display: flex;
 }
 
 #topStats h1 {
@@ -407,16 +403,16 @@ html, body {
 }
 
 #backArrow {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  font-size: 24px;
+  display: flex;
+  padding: 20px;
+  align-items: center; /* Add this to vertically align items */
 }
 
 #backArrow a {
-  text-decoration: none;
-  color: #000;
+  font-size: 24px;
+  color: black;
 }
+
 
 .stats-link {
   padding: 0 15px;
