--- a/style.css
+++ b/style.css
@@ -404,8 +404,8 @@ html, body {
 
 #backArrow {
   display: flex;
-  padding: 20px;
-  align-items: center; /* Add this to vertically align items */
+  padding: 0 20px 20px 20px;
+  align-items: center; 
 }
 
 #backArrow a {
